fix spacing on topic hed

--- a/src/css/layout/_topic.scss
+++ b/src/css/layout/_topic.scss
@@ -10,11 +10,10 @@
   display: flex;
   font-family: $font-family-sans;
   font-size: $font-size-base-plus;
-  margin: $spacing-x-large $spacing-medium $spacing-base;
-  padding-top: $spacing-base;
+  margin: $spacing-medium $spacing-medium $spacing-base;
 }
 
 .topic-hed__subtitle {
   font-size: $font-size-base;
-  margin-left: $spacing-base;
+  margin-left: $spacing-small;
 }
